--- a/MoviesSwift/Base.lproj/Main.storyboard
+++ b/MoviesSwift/Base.lproj/Main.storyboard
@@ -47,6 +47,133 @@
             </objects>
             <point key="canvasLocation" x="1102" y="-564"/>
         </scene>
+        <!--Movie With Details View Controller-->
+        <scene sceneID="ved-j8-3kL">
+            <objects>
+                <viewController storyboardIdentifier="MovieWithDetailsViewController" id="b8k-HI-Wln" customClass="MovieWithDetailsViewController" customModule="MoviesSwift" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="4Z1-PJ-0i6">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5l5-lx-O07">
+                                <rect key="frame" x="0.0" y="20" width="375" height="980"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ZXK-Z0-rlR">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="1000"/>
+                                        <subviews>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="qAC-Dm-b6M">
+                                                <rect key="frame" x="112.5" y="32" width="150" height="200"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="200" id="Rhc-XI-GrC"/>
+                                                    <constraint firstAttribute="width" constant="150" id="n6v-7K-1K0"/>
+                                                </constraints>
+                                            </imageView>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="f2r-x1-Akc">
+                                                <rect key="frame" x="16" y="256" width="343" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Avt-FV-cF5">
+                                                <rect key="frame" x="16" y="300.5" width="343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nGo-a2-TYN">
+                                                <rect key="frame" x="16" y="345.5" width="343" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="81Q-h5-9fr">
+                                                <rect key="frame" x="16" y="390" width="343" height="20.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oW0-dZ-Oq4">
+                                                <rect key="frame" x="16" y="434.5" width="343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="14M-4p-r3s">
+                                                <rect key="frame" x="16" y="479.5" width="343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4YG-zV-FOK">
+                                                <rect key="frame" x="16" y="524.5" width="343" height="21"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                        </subviews>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="oW0-dZ-Oq4" secondAttribute="trailing" constant="16" id="0a7-Hi-gHe"/>
+                                            <constraint firstItem="14M-4p-r3s" firstAttribute="top" secondItem="oW0-dZ-Oq4" secondAttribute="bottom" constant="24" id="25L-nL-2te"/>
+                                            <constraint firstItem="81Q-h5-9fr" firstAttribute="leading" secondItem="ZXK-Z0-rlR" secondAttribute="leading" constant="16" id="53M-tx-mPx"/>
+                                            <constraint firstItem="Avt-FV-cF5" firstAttribute="leading" secondItem="ZXK-Z0-rlR" secondAttribute="leading" constant="16" id="58Y-wp-Tsk"/>
+                                            <constraint firstItem="qAC-Dm-b6M" firstAttribute="centerX" secondItem="ZXK-Z0-rlR" secondAttribute="centerX" id="7cR-AP-ZE1"/>
+                                            <constraint firstAttribute="trailing" secondItem="4YG-zV-FOK" secondAttribute="trailing" constant="16" id="KKc-yQ-lqB"/>
+                                            <constraint firstAttribute="trailing" secondItem="f2r-x1-Akc" secondAttribute="trailing" constant="16" id="LE3-gY-xFA"/>
+                                            <constraint firstItem="nGo-a2-TYN" firstAttribute="top" secondItem="Avt-FV-cF5" secondAttribute="bottom" constant="24" id="LRt-of-BHS"/>
+                                            <constraint firstAttribute="trailing" secondItem="14M-4p-r3s" secondAttribute="trailing" constant="16" id="Lgy-Ae-CNU"/>
+                                            <constraint firstItem="nGo-a2-TYN" firstAttribute="leading" secondItem="ZXK-Z0-rlR" secondAttribute="leading" constant="16" id="MPv-KL-w2s"/>
+                                            <constraint firstAttribute="trailing" secondItem="Avt-FV-cF5" secondAttribute="trailing" constant="16" id="NU1-77-FXB"/>
+                                            <constraint firstItem="oW0-dZ-Oq4" firstAttribute="leading" secondItem="ZXK-Z0-rlR" secondAttribute="leading" constant="16" id="O5a-y0-OAf"/>
+                                            <constraint firstItem="oW0-dZ-Oq4" firstAttribute="top" secondItem="81Q-h5-9fr" secondAttribute="bottom" constant="24" id="Ojd-q1-Wbw"/>
+                                            <constraint firstItem="14M-4p-r3s" firstAttribute="leading" secondItem="ZXK-Z0-rlR" secondAttribute="leading" constant="16" id="Q7U-lW-toj"/>
+                                            <constraint firstItem="4YG-zV-FOK" firstAttribute="top" secondItem="14M-4p-r3s" secondAttribute="bottom" constant="24" id="Yuh-hM-NKd"/>
+                                            <constraint firstItem="Avt-FV-cF5" firstAttribute="top" secondItem="f2r-x1-Akc" secondAttribute="bottom" constant="24" id="a1t-U4-Jxi"/>
+                                            <constraint firstAttribute="height" constant="1000" id="dl1-aN-8eV"/>
+                                            <constraint firstItem="81Q-h5-9fr" firstAttribute="top" secondItem="nGo-a2-TYN" secondAttribute="bottom" constant="24" id="gba-0y-0gD"/>
+                                            <constraint firstItem="4YG-zV-FOK" firstAttribute="leading" secondItem="ZXK-Z0-rlR" secondAttribute="leading" constant="16" id="oRk-eK-guG"/>
+                                            <constraint firstItem="f2r-x1-Akc" firstAttribute="top" secondItem="qAC-Dm-b6M" secondAttribute="bottom" constant="24" id="pBA-io-yHD"/>
+                                            <constraint firstItem="f2r-x1-Akc" firstAttribute="leading" secondItem="ZXK-Z0-rlR" secondAttribute="leading" constant="16" id="t2q-bv-oSW"/>
+                                            <constraint firstItem="qAC-Dm-b6M" firstAttribute="top" secondItem="ZXK-Z0-rlR" secondAttribute="top" constant="32" id="tmU-dk-oFE"/>
+                                            <constraint firstAttribute="trailing" secondItem="81Q-h5-9fr" secondAttribute="trailing" constant="16" id="yTV-zK-dNU"/>
+                                            <constraint firstAttribute="trailing" secondItem="nGo-a2-TYN" secondAttribute="trailing" constant="16" id="zFE-mQ-nNz"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="ZXK-Z0-rlR" firstAttribute="top" secondItem="5l5-lx-O07" secondAttribute="top" id="Lbx-bC-3S4"/>
+                                    <constraint firstItem="ZXK-Z0-rlR" firstAttribute="leading" secondItem="5l5-lx-O07" secondAttribute="leading" id="UYW-Ob-WT6"/>
+                                    <constraint firstAttribute="trailing" secondItem="ZXK-Z0-rlR" secondAttribute="trailing" id="qT3-fW-gGu"/>
+                                    <constraint firstAttribute="bottom" secondItem="ZXK-Z0-rlR" secondAttribute="bottom" id="qyV-B6-ZGk"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="5l5-lx-O07" firstAttribute="leading" secondItem="svq-xb-Hh5" secondAttribute="leading" id="OdZ-Fm-aqR"/>
+                            <constraint firstItem="svq-xb-Hh5" firstAttribute="trailing" secondItem="5l5-lx-O07" secondAttribute="trailing" id="bEB-xb-eg7"/>
+                            <constraint firstItem="ZXK-Z0-rlR" firstAttribute="width" secondItem="4Z1-PJ-0i6" secondAttribute="width" id="hZ6-md-PAe"/>
+                            <constraint firstItem="svq-xb-Hh5" firstAttribute="bottom" secondItem="5l5-lx-O07" secondAttribute="bottom" id="nfT-zR-BsR"/>
+                            <constraint firstItem="5l5-lx-O07" firstAttribute="top" secondItem="svq-xb-Hh5" secondAttribute="top" id="wRv-wb-MbB"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="svq-xb-Hh5"/>
+                    </view>
+                    <size key="freeformSize" width="375" height="1000"/>
+                    <connections>
+                        <outlet property="genresLabel" destination="nGo-a2-TYN" id="Zv0-ZS-sVd"/>
+                        <outlet property="languagesLabel" destination="4YG-zV-FOK" id="l3Y-W8-kaW"/>
+                        <outlet property="moviePosterView" destination="qAC-Dm-b6M" id="KaH-fE-B5f"/>
+                        <outlet property="overviewLabel" destination="81Q-h5-9fr" id="rxA-z1-0Go"/>
+                        <outlet property="revenueLabel" destination="14M-4p-r3s" id="4kc-cQ-M6q"/>
+                        <outlet property="runtimeLabel" destination="oW0-dZ-Oq4" id="glp-J0-dpn"/>
+                        <outlet property="titleLabel" destination="f2r-x1-Akc" id="PUd-oO-Vbf"/>
+                        <outlet property="yearLabel" destination="Avt-FV-cF5" id="8pg-jb-kqg"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="bdB-do-Csp" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2092" y="-415"/>
+        </scene>
         <!--Navigation Controller-->
         <scene sceneID="7XC-aP-9Kn">
             <objects>
