--- a/TableViewCells/MoviesTableViewCell.xib
+++ b/TableViewCells/MoviesTableViewCell.xib
@@ -12,57 +12,59 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="126" id="KGk-i7-Jjw" customClass="MoviesTableViewCell" customModule="MoviesSwift" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="367" height="126"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="151" id="KGk-i7-Jjw" customClass="MoviesTableViewCell" customModule="MoviesSwift" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="367" height="151"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="367" height="125.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="367" height="150.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="FbZ-nY-HXu">
-                        <rect key="frame" x="16" y="15" width="71.5" height="95.5"/>
+                        <rect key="frame" x="16" y="16.5" width="90" height="120"/>
                         <constraints>
-                            <constraint firstAttribute="width" secondItem="FbZ-nY-HXu" secondAttribute="height" multiplier="3:4" id="8TL-au-a3u"/>
+                            <constraint firstAttribute="height" constant="120" id="6hj-Pu-wh4"/>
+                            <constraint firstAttribute="width" constant="90" id="cTl-Oy-Tm4"/>
                         </constraints>
                     </imageView>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loW-za-5eq">
-                        <rect key="frame" x="103.5" y="15" width="247.5" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="loW-za-5eq">
+                        <rect key="frame" x="122" y="16.5" width="229" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mnu-oq-arD">
-                        <rect key="frame" x="103.5" y="52" width="247.5" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mnu-oq-arD">
+                        <rect key="frame" x="122" y="53" width="229" height="45"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkC-XV-o5e">
-                        <rect key="frame" x="103.5" y="89" width="247.5" height="21"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DkC-XV-o5e">
+                        <rect key="frame" x="122" y="116" width="229" height="20.5"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="zAu-Z5-hcb">
-                        <rect key="frame" x="42" y="53" width="20" height="20"/>
+                        <rect key="frame" x="51" y="66.5" width="20" height="20"/>
                     </activityIndicatorView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="mnu-oq-arD" firstAttribute="leading" secondItem="FbZ-nY-HXu" secondAttribute="trailing" constant="16" id="045-3A-qmt"/>
+                    <constraint firstItem="DkC-XV-o5e" firstAttribute="top" secondItem="mnu-oq-arD" secondAttribute="bottom" constant="18" id="6fb-9z-6md"/>
                     <constraint firstItem="FbZ-nY-HXu" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="7bj-ay-CfB"/>
                     <constraint firstItem="FbZ-nY-HXu" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="7wr-l7-urC"/>
                     <constraint firstAttribute="trailing" secondItem="DkC-XV-o5e" secondAttribute="trailing" constant="16" id="KfH-XF-etg"/>
-                    <constraint firstItem="DkC-XV-o5e" firstAttribute="top" secondItem="mnu-oq-arD" secondAttribute="bottom" constant="16" id="Rbz-20-6eg"/>
+                    <constraint firstAttribute="bottom" secondItem="FbZ-nY-HXu" secondAttribute="bottom" constant="16" id="NHa-53-EIh"/>
                     <constraint firstItem="loW-za-5eq" firstAttribute="leading" secondItem="FbZ-nY-HXu" secondAttribute="trailing" constant="16" id="YVr-dT-aMT"/>
-                    <constraint firstAttribute="bottom" secondItem="DkC-XV-o5e" secondAttribute="bottom" constant="15.5" id="bCh-VV-JoB"/>
                     <constraint firstAttribute="trailing" secondItem="mnu-oq-arD" secondAttribute="trailing" constant="16" id="evq-ii-vXG"/>
                     <constraint firstItem="loW-za-5eq" firstAttribute="top" secondItem="FbZ-nY-HXu" secondAttribute="top" id="fJw-oM-CU4"/>
                     <constraint firstItem="zAu-Z5-hcb" firstAttribute="centerX" secondItem="FbZ-nY-HXu" secondAttribute="centerX" id="i2B-An-3OX"/>
+                    <constraint firstItem="DkC-XV-o5e" firstAttribute="bottom" secondItem="FbZ-nY-HXu" secondAttribute="bottom" id="kVA-mF-LT1"/>
                     <constraint firstAttribute="trailing" secondItem="loW-za-5eq" secondAttribute="trailing" constant="16" id="nUk-2a-htZ"/>
                     <constraint firstItem="zAu-Z5-hcb" firstAttribute="centerY" secondItem="FbZ-nY-HXu" secondAttribute="centerY" id="pX9-ei-EGr"/>
                     <constraint firstItem="DkC-XV-o5e" firstAttribute="leading" secondItem="FbZ-nY-HXu" secondAttribute="trailing" constant="16" id="peX-MZ-W2E"/>
                     <constraint firstItem="mnu-oq-arD" firstAttribute="top" secondItem="loW-za-5eq" secondAttribute="bottom" constant="16" id="qbG-pt-ZEF"/>
-                    <constraint firstItem="FbZ-nY-HXu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="15" id="xPY-EM-HcL"/>
+                    <constraint firstItem="FbZ-nY-HXu" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="xPY-EM-HcL"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
@@ -73,7 +75,7 @@
                 <outlet property="moviesPoster" destination="FbZ-nY-HXu" id="nJF-Ib-rBv"/>
                 <outlet property="titleLabel" destination="loW-za-5eq" id="37o-jF-IWC"/>
             </connections>
-            <point key="canvasLocation" x="79.200000000000003" y="71.064467766116948"/>
+            <point key="canvasLocation" x="60" y="76.911544227886068"/>
         </tableViewCell>
     </objects>
 </document>
